--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "ejs-compiled-loader",
-  "version": "2.2.0",
-  "description": "EJS webpack loader (without frontend dependencies)",
+  "name": "ejs-rendered-loader",
+  "version": "0.0.1",
+  "description": "EJS rendered webpack loader",
   "main": "index.js",
   "scripts": {
-    "test": "cd test && ../node_modules/.bin/webpack && node bundle.js"
+    "test": "cd test && node index.js && node bundle.js"
   },
+  "files": [
+    "index.js",
+    "LICENSE",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/bazilio91/ejs-compiled-loader.git"
+    "url": "https://github.com/UnifiedFactory/ejs-rendered-loader.git"
   },
   "keywords": [
     "ejs",
     "webpack",
     "loader",
-    "template"
+    "template",
+    "rendered"
   ],
-  "author": "Vasily Ostanin <bazilio91@gmail.com>",
+  "author": "Rafal2228 <rafal2228@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bazilio91/ejs-compiled-loader/issues"
+    "url": "https://github.com/UnifiedFactory/ejs-rendered-loader/issues"
   },
-  "homepage": "https://github.com/bazilio91/ejs-compiled-loader",
+  "homepage": "https://github.com/UnifiedFactory/ejs-rendered-loader",
   "dependencies": {
-    "ejs": "^2.0.0",
-    "html-minifier": "^3",
-    "loader-utils": "^0.2.7",
-    "merge": "^1.2.0",
-    "uglify-js": "~2.6.1"
+    "ejs": "^2.6.1",
+    "html-minifier": "^3.5.20",
+    "loader-utils": "^1.1.0"
   },
   "devDependencies": {
-    "node-libs-browser": "^0.5.0",
-    "webpack": "^1.9.4"
+    "chalk": "^2.4.1",
+    "webpack": "^4.20.2"
   }
 }
